# opensource.apple.com

./: README.md  files.txt
src/Csu/Csu-47/: Makefile  start.s
src/Csu/Csu-58.1.1/: bundle1.s
src/Csu/Csu-71/: Makefile  crt.c  dyld_glue.s  start.s
src/Csu/Csu-76/: Makefile  crt.c  dyld_glue.s  lazy_dylib_helper.s  start.s
src/DeveloperTools-10A394/10A394/gdb-1340/: Makefile
src/SmartCardServices/SmartCardServices-26777/SmartCardServices.xcode/: project.pbxproj
src/SmartCardServices/SmartCardServices-27378/SmartCardServices.xcode/: project.pbxproj
src/SmartCardServices/SmartCardServices-30487/SmartCardServices.xcode/: project.pbxproj
src/Twisted/Twisted-1/: Makefile  Twisted-2.0.1.tar.bz2  Twisted.plist
src/apache_mod_bw/apache_mod_bw-203/: Makefile
src/apache_mod_bw/apache_mod_bw-205/: Makefile
src/clamav/clamav-151.1/: Makefile
src/clamav/clamav-151.1/clamav.Bin/: clamav-patch-7054720.diff
src/clamav/clamav-151.1/clamav.Conf/: clamd.conf.default  freshclam.conf.default
src/clamav/clamav-151.1/clamav.LaunchDaemons/: org.clamav.clamd.plist  org.clamav.freshclam-init.plist  org.clamav.freshclam.plist
src/clamav/clamav-151.1/clamav.OpenSourceInfo/: clamav.plist
src/clamav/clamav-151.1/clamav.SetupExtras/: SetupClamAV.sh  clamd.sb
src/clamav/clamav-158/: Makefile
src/clamav/clamav-158/clamav.Conf/: com.apple.server.clamd  com.apple.server.freshclam
src/clamav/clamav-158/clamav.OpenSourceInfo/: clamav.plist
src/clamav/clamav-158/clamav.Patches/: patch1.txt  patch2.txt  patch3.txt  (+2 more)
src/cxxfilt/cxxfilt-3/: Makefile  cxxfilt.plist
src/distcc/distcc-1201/: Common.make
src/distcc/distcc-1648/: GNUSource.make  runmake.sh
src/distcc/distcc-1686/: config.status  distcc.plist  distccd.plist
src/distcc/distcc-1702/: Common.make  Makefile  config.status  pump  runmake.sh
src/distcc/distcc-1705/: Makefile  config.status  pump
src/distcc/distcc-19/: Makefile
src/distcc/distcc-2503/: Makefile  config.status  distcc_compilers  pump
src/distcc/distcc-2805/: Makefile  com.apple.distccd.plist  config.status  distcc.README  pump  runmake.sh
src/distcc/distcc-39/: distcc.plist  distccd.plist
src/distcc/distcc-43/: distccd.plist
src/distcc/distcc-786/: compilers
src/dovecot/dovecot-279/: Makefile  pigeonhole-version.sieve
src/dovecot/dovecot-293/: Makefile
src/dovecot/dovecot-293/dovecot/doc/wiki/: Makefile.am  Makefile.in
src/dovecot/dovecot-293/dovecot/src/plugins/: Makefile.am  Makefile.in
src/dovecot/dovecot-293/dovecot/src/plugins/acl/: Makefile.in
src/dovecot/dovecot-293/dovecot/src/plugins/autocreate/: Makefile.in
src/dovecot/dovecot-293/dovecot/src/plugins/expire/: Makefile.in
src/dovecot/dovecot-293/dovecot/src/plugins/fts/: Makefile.am  Makefile.in  fts-indexer.c  fts-indexer.h  fts-storage.c  fts-storage.h
src/dovecot/dovecot-293/dovecot/src/plugins/fts-lucene/: Makefile.in
src/dovecot/dovecot-293/dovecot/src/plugins/fts-sk/: Makefile.am  Makefile.in  fts-backend-sk.c  fts-sk-plugin.c  fts-sk-plugin.h
src/dovecot/dovecot-293/dovecot/src/plugins/fts-solr/: Makefile.in
src/dovecot/dovecot-293/dovecot/src/plugins/fts-squat/: Makefile.in
src/dovecot/dovecot-293/dovecot/src/plugins/imap-acl/: Makefile.in
src/dovecot/dovecot-293/dovecot/src/plugins/imap-quota/: Makefile.in
src/dovecot/dovecot-293/dovecot/src/plugins/imap-stats/: Makefile.in
src/dovecot/dovecot-293/dovecot/src/plugins/imap-zlib/: Makefile.in  imap-zlib-plugin.c
src/dovecot/dovecot-293/dovecot/src/plugins/lazy-expunge/: Makefile.in
src/dovecot/dovecot-293/dovecot/src/plugins/listescape/: Makefile.in
src/dovecot/dovecot-293/dovecot/src/plugins/mail-log/: Makefile.in
src/dovecot/dovecot-293/dovecot/src/plugins/mailbox-alias/: Makefile.in
src/dovecot/dovecot-293/dovecot/src/plugins/notify/: Makefile.in
src/dovecot/dovecot-293/dovecot/src/plugins/pop3-migration/: Makefile.in
src/dovecot/dovecot-293/dovecot/src/plugins/push-notify/: Makefile.am  Makefile.in  push-notify-plugin.c  push-notify-plugin.h
src/dovecot/dovecot-293/dovecot/src/plugins/quota/: Makefile.in
src/dovecot/dovecot-293/dovecot/src/plugins/replication/: Makefile.in
src/dovecot/dovecot-293/dovecot/src/plugins/snarf/: Makefile.in
src/dovecot/dovecot-293/dovecot/src/plugins/stats/: Makefile.in
src/dovecot/dovecot-293/dovecot/src/plugins/trash/: Makefile.in
src/dovecot/dovecot-293/dovecot/src/plugins/virtual/: Makefile.in
src/dovecot/dovecot-293/dovecot/src/plugins/zlib/: Makefile.in
src/gcc_42/gcc_42-5553/: ChangeLog.apple  build_gcc  build_libgcc  driverdriver.c
src/gcc_42/gcc_42-5564/: ChangeLog.apple  build_gcc  build_libgcc
src/gcc_42/gcc_42-5577/: build_gcc  build_libgcc
src/gcc_legacy/gcc_legacy-939/: build_gcc
src/libstdcxx/libstdcxx-10/: Makefile
src/libstdcxx/libstdcxx-11/: Makefile
src/libstdcxx/libstdcxx-5.1.0.7/: Makefile
src/llvmCore/llvmCore-2326.12/: GNUmakefile
src/llvmgcc42/llvmgcc42-2335.15/: GNUmakefile  build_gcc
src/llvmgcc42/llvmgcc42-2335.9/: build_gcc  config.guess  driverdriver.c
src/llvmgcc42/llvmgcc42-2336.1/: Makefile.in  build_gcc  configure  configure.in
src/llvmgcc42/llvmgcc42-2336.11/: configure.in
src/llvmgcc42/llvmgcc42-2336.9/: ChangeLog.apple  build_gcc  configure
src/net_snmp/net_snmp-19.1/: AEP.make  Makefile
src/net_snmp/net_snmp-9/: Makefile
src/ntp/ntp-24/: Makefile
src/pb_makefiles/pb_makefiles-1000/: CVSVersionInfo.txt  implicitrules.make
src/pb_makefiles/pb_makefiles-1002/: platform-variables.make
src/pb_makefiles/pb_makefiles-122/: CVSVersionInfo.txt
src/pb_makefiles/pb_makefiles-127/: commands-MACOS.make
src/ppp/ppp-233.10/: PPP_VERSION.h
src/ppp/ppp-233.11/: PPP_VERSION.h
src/ppp/ppp-233.15/: PPP_VERSION.h
src/ppp/ppp-233.16/: PPP_VERSION.h
src/ppp/ppp-233.18/: PPP_VERSION.h
src/prebind/prebind-109.1/: Makefile  update_prebinding.cxx
src/procmail/procmail-7/: Makefile
src/ruby/ruby-11/: Makefile
src/ruby/ruby-14/: Makefile
src/ruby/ruby-22/: Makefile
src/ruby/ruby-22.0.1/: Makefile
src/ruby/ruby-22.1.1/: Makefile
src/tcl/tcl-10/: Makefile
(+2354 files in other folders)
