if BUILD_DOCS
wikidir = $(docdir)/wiki
wiki_DATA = $(wikifiles)
endif

EXTRA_DIST = \
	$(wikifiles)

wikifiles = ACL.txt \
	AixPluginsSupport.txt \
	AuthDatabase.CheckPassword.txt \
	AuthDatabase.Dict.txt \
	AuthDatabase.LDAP.AuthBinds.txt \
	AuthDatabase.LDAP.PasswordLookups.txt \
	AuthDatabase.LDAP.Userdb.txt \
	AuthDatabase.LDAP.txt \
	AuthDatabase.Passwd.txt \
	AuthDatabase.PasswdFile.txt \
	AuthDatabase.SQL.txt \
	AuthDatabase.VPopMail.txt \
	AuthDatabase.txt \
	Authentication.Caching.txt \
	Authentication.Kerberos.txt \
	Authentication.MasterUsers.txt \
	Authentication.Mechanisms.DigestMD5.txt \
	Authentication.Mechanisms.NTLM.txt \
	Authentication.Mechanisms.Winbind.txt \
	Authentication.Mechanisms.txt \
	Authentication.MultipleDatabases.txt \
	Authentication.PasswordSchemes.txt \
	Authentication.RestrictAccess.txt \
	Authentication.txt \
	BasicConfiguration.txt \
	Chrooting.txt \
	Clients.NegativeUIDs.txt \
	Clients.txt \
	CompilingSource.txt \
	Debugging.Authentication.txt \
	Debugging.ProcessTracing.txt \
	Debugging.Rawlog.txt \
	Debugging.Thunderbird.txt \
	Design.Arrays.txt \
	Design.AuthProcess.txt \
	Design.AuthProtocol.txt \
	Design.Buffers.txt \
	Design.Code.txt \
	Design.DoveadmProtocol.txt \
	Design.Dsync.txt \
	Design.Indexes.Cache.txt \
	Design.Indexes.MailIndexApi.txt \
	Design.Indexes.MainIndex.txt \
	Design.Indexes.TransactionLog.txt \
	Design.Indexes.txt \
	Design.InputStreams.txt \
	Design.MailProcess.txt \
	Design.Memory.txt \
	Design.OutputStreams.txt \
	Design.Plugins.txt \
	Design.Processes.txt \
	Design.Storage.ErrorHandling.txt \
	Design.Storage.Mail.txt \
	Design.Storage.MailNamespace.txt \
	Design.Storage.MailStorage.txt \
	Design.Storage.MailUser.txt \
	Design.Storage.Mailbox.Save.txt \
	Design.Storage.Mailbox.Search.txt \
	Design.Storage.Mailbox.Sync.txt \
	Design.Storage.Mailbox.Transaction.txt \
	Design.Storage.Mailbox.txt \
	Design.Storage.MailboxList.txt \
	Design.Storage.Plugins.txt \
	Design.Strings.txt \
	Design.txt \
	Dict.txt \
	Director.txt \
	DomainLost.txt \
	Errors.ChgrpNoPerm.txt \
	FindMailLocation.txt \
	FinishBasicConfiguration.txt \
	HowTo.EximAndDovecotSASL.txt \
	HowTo.ImapcProxy.txt \
	HowTo.PopBSMTPAndDovecot.txt \
	HowTo.PopRelay.txt \
	HowTo.PostfixAndDovecotSASL.txt \
	HowTo.Rootless.txt \
	HowTo.SimpleVirtualInstall.txt \
	HowTo.txt \
	IndexFiles.txt \
	LDA.Exim.txt \
	LDA.Indexing.txt \
	LDA.Postfix.txt \
	LDA.Qmail.txt \
	LDA.Sendmail.txt \
	LDA.txt \
	LMTP.Exim.txt \
	LMTP.txt \
	Logging.txt \
	LoginProcess.txt \
	MDA.txt \
	MTA.txt \
	MailLocation.LocalDisk.txt \
	MailLocation.Maildir.txt \
	MailLocation.SharedDisk.txt \
	MailLocation.dbox.txt \
	MailLocation.mbox.txt \
	MailLocation.txt \
	MailboxFormat.Cydir.txt \
	MailboxFormat.MH.txt \
	MailboxFormat.Maildir.txt \
	MailboxFormat.dbox.txt \
	MailboxFormat.mailstore.txt \
	MailboxFormat.mbox.txt \
	MailboxFormat.mbx.txt \
	MailboxFormat.txt \
	MailboxSettings.txt \
	MboxChildFolders.txt \
	MboxLocking.txt \
	MboxProblems.txt \
	Migration.BincIMAP.txt \
	Migration.Courier.txt \
	Migration.Cyrus.txt \
	Migration.Dsync.txt \
	Migration.Gmail.txt \
	Migration.Linuxconf.txt \
	Migration.MailFormat.txt \
	Migration.Online.txt \
	Migration.Teapop.txt \
	Migration.UW.txt \
	Migration.Vm-pop3d.txt \
	Migration.txt \
	MissingMailboxes.txt \
	Mountpoints.txt \
	NFS.txt \
	Namespaces.txt \
	OSCompatibility.txt \
	POP3Server.txt \
	PasswordDatabase.BSDAuth.txt \
	PasswordDatabase.ExtraFields.AllowNets.txt \
	PasswordDatabase.ExtraFields.Host.txt \
	PasswordDatabase.ExtraFields.NoDelay.txt \
	PasswordDatabase.ExtraFields.NoLogin.txt \
	PasswordDatabase.ExtraFields.Proxy.txt \
	PasswordDatabase.ExtraFields.User.txt \
	PasswordDatabase.ExtraFields.txt \
	PasswordDatabase.IMAP.txt \
	PasswordDatabase.PAM.txt \
	PasswordDatabase.Shadow.txt \
	PasswordDatabase.Static.txt \
	PasswordDatabase.txt \
	PerformanceTuning.txt \
	Pigeonhole.Installation.txt \
	Pigeonhole.ManageSieve.Clients.txt \
	Pigeonhole.ManageSieve.Configuration.txt \
	Pigeonhole.ManageSieve.Install.txt \
	Pigeonhole.ManageSieve.Troubleshooting.txt \
	Pigeonhole.ManageSieve.txt \
	Pigeonhole.Sieve.Configuration.txt \
	Pigeonhole.Sieve.Examples.txt \
	Pigeonhole.Sieve.Extensions.SpamtestVirustest.txt \
	Pigeonhole.Sieve.Extensions.Vacation.txt \
	Pigeonhole.Sieve.Extensions.txt \
	Pigeonhole.Sieve.Plugins.Extdata.txt \
	Pigeonhole.Sieve.Plugins.Extprograms.txt \
	Pigeonhole.Sieve.Plugins.Pipe.txt \
	Pigeonhole.Sieve.Plugins.txt \
	Pigeonhole.Sieve.Troubleshooting.txt \
	Pigeonhole.Sieve.Usage.txt \
	Pigeonhole.Sieve.txt \
	Pigeonhole.txt \
	Plugins.Autocreate.txt \
	Plugins.Compress.txt \
	Plugins.Expire.txt \
	Plugins.FTS.Lucene.txt \
	Plugins.FTS.Solr.txt \
	Plugins.FTS.Squat.txt \
	Plugins.FTS.txt \
	Plugins.Lazyexpunge.txt \
	Plugins.Listescape.txt \
	Plugins.MailLog.txt \
	Plugins.MailboxAlias.txt \
	Plugins.Notify.txt \
	Plugins.Snarf.txt \
	Plugins.Stats.txt \
	Plugins.Trash.txt \
	Plugins.Virtual.txt \
	Plugins.Zlib.txt \
	Plugins.txt \
	PostLoginScripting.txt \
	PreAuth.txt \
	QuickConfiguration.txt \
	Quota.Configuration.txt \
	Quota.Dict.txt \
	Quota.Dirsize.txt \
	Quota.FS.txt \
	Quota.Maildir.txt \
	Quota.txt \
	Replication.txt \
	RunningDovecot.txt \
	SSL.CertificateClientImporting.txt \
	SSL.CertificateCreation.txt \
	SSL.DovecotConfiguration.txt \
	SSL.SNIClientSupport.txt \
	SSL.txt \
	Sasl.txt \
	SecurityTuning.txt \
	Services.txt \
	SharedMailboxes.Permissions.txt \
	SharedMailboxes.Public.txt \
	SharedMailboxes.Shared.txt \
	SharedMailboxes.Symlinks.txt \
	SharedMailboxes.txt \
	Statistics.txt \
	SystemUsers.txt \
	TestInstallation.txt \
	TestPop3Installation.txt \
	TimeMovedBackwards.txt \
	Upgrading.1.0.txt \
	Upgrading.1.1.txt \
	Upgrading.1.2.txt \
	Upgrading.2.0.txt \
	Upgrading.2.1.txt \
	Upgrading.2.2.txt \
	Upgrading.txt \
	UserDatabase.ExtraFields.txt \
	UserDatabase.NSS.txt \
	UserDatabase.Prefetch.txt \
	UserDatabase.Static.txt \
	UserDatabase.txt \
	UserIds.txt \
	Variables.txt \
	VirtualUsers.Home.txt \
	VirtualUsers.txt \
	WhyDoesItNotWork.txt \
	maildrop.txt \
	mutt.txt \
	uw2dovecot.sh.txt
